<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_pic"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#090909"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clickMeButton"
        android:layout_width="155dp"
        android:layout_height="61dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="#000000"
        android:text="@string/button_text1"
        android:textColorHighlight="#E6DBDB"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button2"
        android:layout_width="105dp"
        android:layout_height="61dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="#100F0F"
        android:text="@string/button.text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#020202" />

    <TextView
        android:id="@+id/enterAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="368dp"
        android:backgroundTint="#000000"
        android:text="@string/ageString"
        android:textAlignment="viewStart"
        android:textColor="#0A0A0B"
        android:textColorHighlight="#191717"
        android:textColorHint="#222020"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="104dp"
        android:ems="10"
        android:inputType="number"
        android:lineSpacingExtra="8sp"
        android:text="@string/editTextNumber"
        android:textAlignment="center"
        android:textColor="#171313"
        android:textColorHint="#D64343"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clickMeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAge"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="348dp"
        android:layout_height="195dp"
        android:layout_marginTop="68dp"
        android:background="#E2F3E9E9"
        android:backgroundTint="#97221616"
        android:textAlignment="center"
        android:textColor="#0A0B0A"
        android:textColorHint="#00E61717"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/enterAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>